<resources>
    <string name="app_name">SoloWater</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_log_out">Log out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_save">Save</string>
    <string name="action_submit">Submit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Invalid login attempt. Please try again.</string>
    <string name="drawer_edit_profile">Edit Profile</string>
    <string name="drawer_water_source_report">Water Source Report</string>
    <string name="water_cond">Water Condition</string>
    <string name="drawer_water_purity_report">Water Purity Report</string>
    <string name="water_purity_cond">Water Purity Condition</string>
    <string name="drawer_water_purity_list">Water Purity List</string>
    <string name="drawer_historical_report">Historical Report</string>


    <string name="pick_date">pick date</string>
    <string name="pick_time">pick time</string>
    <string name="water_report_number_input">Water report number</string>
    <string name="water_report_username_input">Your name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sample">Sample</string>

    <string name="vir_ppm">Virus PPM</string>
    <string name="cont_pmp">Contaminant PPM</string>

    <string name="date_format">MM/DD/YYYY</string>
    <string name="time_format">HH:MM</string>

    <string name="data1_x">Data1(x-axis)</string>
    <string name="data2_y">Data2_y</string>
    <string name="data3_z">Data3(z-axis) optional</string>
    <string name="update">Update</string>

    <string name="location">Location</string>
    <string name="confirm_pass">Confirm Password</string>

    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="water_type">Water Type</string>
</resources>
