<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.gatech.edu.soloTechno.m4_login.controllers.WaterReportActivity">

    <!-- Submit progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/report_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/water_report_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/water_report_number_input"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/water_report_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/water_report_username_input"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text = "@string/location"
                android:id="@+id/water_report_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"/>

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"

                />

            <TextView
                android:text="@string/water_purity_cond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/water_purity_condition_spinner_text"
                android:layout_marginTop="38dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/water_purity_condition_spinner"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="4dp"
                android:text="@string/vir_ppm"
                tools:ignore="TextViewEdits"/>

            <EditText
                android:id="@+id/virusPPM_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="4dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cont_pmp" />

            <EditText
                android:id="@+id/contaminantPPM_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="4dp"
                android:text="" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <Button
                    android:layout_height="match_parent"
                    android:text="@string/pick_date"
                    android:onClick="showDatePickerDialog"
                    android:layout_width="100dp"
                    />

                <TextView
                    android:id="@+id/pick_date_input"
                    android:layout_width="match_parent"
                    android:text="@string/date_format"
                    android:layout_centerHorizontal="true"
                    android:layout_height="match_parent"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <Button
                    android:layout_height="match_parent"
                    android:text="@string/pick_time"
                    android:onClick="showTimePickerDialog"
                    android:layout_width="100dp"
                    />

                <TextView
                    android:id="@+id/pick_time_input"
                    android:layout_width="match_parent"
                    android:text="@string/time_format"
                    android:layout_centerHorizontal="true"
                    android:layout_height="match_parent"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save"
                android:textStyle="bold"
                android:id="@+id/save_button" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
