<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="510dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Spinner
                            android:layout_width="251dp"
                            android:layout_height="36dp"
                            android:id="@+id/spinner4" />

                        <Button
                            android:text="@string/update"
                            android:layout_width="367dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/update_button" />


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:hint="@string/confirm_pass"
                            android:id="@+id/confirm_Password"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            />

                    </android.support.design.widget.TextInputLayout>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:id="@+id/password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email" />

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:id="@+id/last_Name" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:id="@+id/first_Name" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>